--- a/style.css
+++ b/style.css
@@ -270,8 +270,8 @@ h1 {
 }
 
 .product-card img {
-    width: 100%;
-    height: 300px;
+    width: 100% !important;
+    height: 300px !important;
 }
 
 .product-card h4 {
