--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
-    background: #1e1e1e66;
+  
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
 
@@ -408,8 +408,8 @@
 }
 
 .product-card img {
-    width: 100% !important;
-    height: 300px !important;
+    width: 100% ;
+    height: 300px;
 }
 
 .product-card h4 {
